<resources>
    <string name="app_name">Circles</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="corporate_clickable_text">Are you a corporate, Singup as a Corporate</string>
    <string name="signup">Sign up</string>
    <string name="welcome_msg">Welcome Back</string>
    <string name="welcome_text">Welcome</string>
    <string name="name">Name</string>
    <string name="search_msg">Search for circles</string>
    <string name="all">All</string>
    <string name="view_all">View All</string>
    <string name="popular_circles">Popular Circles</string>
    <string name="discover_places">Discover Places</string>
    <string name="join">Join</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="hello">Hello</string>
    <string name="circle_code">Circle code</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="created_by">Created By</string>
    <string name="ask_for_details">Ask For Details</string>
    <string name="messages">Messages</string>
    <string name="search_your_messages">Search your messages</string>
    <string name="type_your_message">Type your message</string>
    <string name="signup_type_msg">How do you want to signup?</string>
    <string name="individual">Individual</string>
    <string name="corporate">Corporate</string>
    <string name="individual_msg">Create your own circles</string>
    <string name="corporate_msg">Advertise</string>
    <string name="interests_msg">Discover your interests</string>
    <string name="select_category">Select Category</string>
    <string name="interested_in">Interested in</string>
    <string name="my_account">My Account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="my_interests">My interests</string>
    <string name="your_badges">Your badges</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="change_your_profile_pic">Change your profile picture</string>
    <string name="update_your_interests">Update your interests</string>
    <string name="account_info">Account Info</string>
    <string name="security_info">Security Info</string>
    <string name="filter">Filter</string>
    <string name="circle_place">Circle Place</string>
    <string name="circle_date">Circle Date</string>
    <string name="circle_place_msg">Choose circle place</string>
    <string name="circle_date_msg">Starting from</string>
    <string name="circle_time">Circle Time</string>
    <string name="circle_time_msg">Choose your circles time</string>
    <string name="circle_audience">Circle Audience</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="to">To</string>
    <string name="company_name">Company Name</string>
    <string name="responsible_person_name">Responsible person name</string>
    <string name="phone">Phone</string>
    <string name="successful_signup_msg">Thank you for signing up with us, we will contact you soon.</string>
    <string name="email_is_used">This email is used by another user.</string>
    <string name="setting_your_profile">Setting your profile</string>
    <string name="upload_profile_pic">Upload profile Photo</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="next">Next</string>
    <string name="add_circle">Add circle</string>
    <string name="circle_name">Circle name</string>
    <string name="no_of_circulars">Number of persons</string>
    <string name="location_fees">Location Fees</string>
    <string name="description">Description</string>
    <string name="this_circle_is_for">This circle is for</string>
    <string name="description_msg">Enter your description</string>
    <string name="splach_blue_logo_image">Blue Circular App Logo</string>
    <string name="splach_white_logo_image">White Circular App Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_content_Description">Category item</string>
    <string name="circle_picture">Circle Picture</string>

    <!--singup validation error messages-->
    <string name="enter_valid_user_name">Please Enter Valid User Name</string>
    <string name="enter_valid_password">Please Enter Valid Password</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>

    <!--todo delete-->
    <string name="placeholder_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="gold_txt">Gold</string>
    <string name="bronz_txt">Bronze</string>
    <string name="silver_txt">Silver</string>
    <string name="done">Done</string>

    <string name="permission_explain_dialog_positive">OK</string>
    <string name="permission_explain_dialog_negative">Cancel</string>
    <string name="permission_explain_message">The app needs this permission to continue.</string>
    <string name="degrade_feature_message">This feature will be disabled till you allow permissions.</string>
    <string name="Take">Take</string>


</resources>