<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_icon_id"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/map_icon_id"
        android:enabled="true"
        android:icon="@drawable/ic_outline_near_me_24"
        android:title="@string/map"/>

    <item
        android:id="@+id/add_cirlce_icon_id"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_outline_add_circle_outline_24"
        android:title="@string/add_circle"/>

    <item
        android:id="@+id/notification_icon_id"
        android:enabled="true"
        android:icon="@drawable/ic_notification_icon"
        android:title="@string/notification"/>

    <item
        android:id="@+id/more_icon_id"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/more"/>
</menu>