<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.signup.select_gender_screen.SelectGenderFragment">

    <TextView
        android:id="@+id/upload_pic_tv_id"
        style="@style/medium_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/upload_profile_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_img_id"
        android:layout_width="158dp"
        android:layout_height="158dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_pic_tv_id"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/choose_gender_tv_id"
        style="@style/medium_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/choose_your_gender"
        app:layout_constraintStart_toStartOf="@+id/upload_pic_tv_id"
        app:layout_constraintTop_toBottomOf="@+id/user_img_id" />

    <LinearLayout
        android:id="@+id/gender_btn_root_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/choose_gender_tv_id"
        app:layout_constraintTop_toBottomOf="@+id/choose_gender_tv_id">

        <LinearLayout
            android:id="@+id/male_btn_id"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_bg"
            android:layout_marginEnd="24dp">

            <ImageView
                android:id="@+id/male_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="0dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:srcCompat="@drawable/ic_icon_awesome_male"
                app:tint="@color/gray" />

            <TextView
                android:id="@+id/male_tv"
                style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/male" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/female_btn_id"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_bg">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="0dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:srcCompat="@drawable/ic_icon_awesome_female" />

            <TextView
                android:id="@+id/textView2"
                style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/female" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>